# TeiaCareInferenceClient

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.docs  Dockerfile.valgrind  README.md  conanfile.py
.github/workflows/: coverage.yml
ci/: build.yml
cmake/: doxygen.cmake  grpc_common.cmake
inference_client/: CMakeLists.txt  conanfile.txt
inference_client/benchmarks/: CMakeLists.txt  conanfile.txt
inference_client/benchmarks/src/: benchmark_teiacore_client.cpp  benchmark_triton_client.cpp  timings_reports.hpp  timings_teiacore_client.cpp  timings_triton_client.cpp
inference_client/docs/: Doxyfile
inference_client/docs/style/: header.html
inference_client/examples/: CMakeLists.txt  conanfile.txt
inference_client/examples/src/: client_example_image_classifier.cpp  client_example_model_info.cpp  client_example_server_info.cpp  client_example_simple_inference.cpp  client_example_yolo.cpp  triton_client_image_inference.cpp  triton_client_simple_example.cpp
inference_client/include/teiacare/inference_client/: client_factory.hpp  client_interface.hpp  data_type.hpp  infer_request.hpp  infer_response.hpp  infer_tensor.hpp  model_metadata.hpp  server_metadata.hpp  timeout_error.hpp  version.hpp
inference_client/src/: client_factory.cpp  client_rpc_unary_async.hpp  data_type.cpp  grpc_client.cpp  grpc_client.hpp  grpc_client_async.cpp  grpc_client_async.hpp  tensor_converter.cpp  tensor_converter.hpp  version.cpp.in
inference_client/tests/: CMakeLists.txt  conanfile.txt
inference_client/tests/src/: main.cpp
proto/: services.proto
scripts/: requirements.txt
scripts/cmake/: configure.py
scripts/tools/: run_coverage.py
scripts/triton/: triton_local_deploy.py
test_package/: CMakeLists.txt  build.py  conanfile.py
test_package/src/: main.cpp
